# geo-drill-extractor

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  run_full_test.py  setup.py
configs/: config.yaml  data.yaml  experiment.yaml  llm.yaml  logging.yaml  output.yaml  processing.yaml
data/: .gitkeep
data_synthetic/: ground_truth_annotations_synthetic.csv  survey_points_synthetic.csv
docs/: README.md
docs/architecture/: system_overview.md
docs/user_guide/: quick_start.md  synthetic_dataset.md
documents/: .gitkeep
documents_synthetic/: README.md  synthetic_doc_001.docx  synthetic_doc_002.docx
scripts/: __init__.py  generate_synthetic_dataset.py  run_incremental_experiment.py  system_check.py  token_test.py
src/core/: config.py  models.py
src/evaluation/: __init__.py  ground_truth.py  metrics.py  tokenizer.py
src/experiment/: __init__.py  exporter.py  runner.py
src/extraction/: coordinate_inferencer.py  document_processor.py  entity_extractor.py  pipeline.py
src/kg_drill_extraction/: __init__.py  __version__.py
src/kg_drill_extraction/core/: __init__.py  config.py  exceptions.py
src/kg_drill_extraction/evaluation/: ground_truth.py  metrics.py  tokenizer.py
src/kg_drill_extraction/experiment/: exporter.py  runner.py
src/kg_drill_extraction/extraction/: __init__.py  coordinate_inferencer.py  document_processor.py  entity_extractor.py  pipeline.py  prompts.py
src/kg_drill_extraction/llm/: aliyun.py  base.py  deepseek.py  factory.py  openrouter.py
src/kg_drill_extraction/utils/: __init__.py
src/llm/: __init__.py  aliyun.py  base.py  deepseek.py  factory.py  openrouter.py
tests/: conftest.py  run_tests.py
